--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ master, main ]
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: windows-latest
@@ -17,15 +20,18 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '18'
+        cache: 'npm'
         
     - name: Install dependencies
-      run: npm install
+      run: |
+        npm config set msvs_version 2019
+        npm install
       
     - name: Build
       run: npm run build
       env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
