--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Build
 
 on:
   push:
-    branches: [ master, main ]
+    branches: [ master, main, electron ]
   pull_request:
-    branches: [ master, main ]
+    branches: [ master, main, electron ]
 
 permissions:
   contents: write
