--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,10 @@ jobs:
         
     - name: Install dependencies
       run: npm install
-      
+
+    - name: Build Electron App (Debugging)
+      run: npx electron-builder --dir
+
     - name: Build
       run: npm run build
       env:
